// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commandbar should customise commandbar settings 1`] = `
<div>
  <header>
    <div
      class="wrapper"
    >
      <div>
        <svg
          height="58"
          version="1.0"
          width="72"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <rect
              fill="black"
              height="14"
              id="alive"
              stroke="#c0c0c0"
              stroke-width="2"
              width="14"
              x="0"
              y="0"
            />
            <rect
              fill="white"
              height="14"
              id="dead"
              stroke="#c0c0c0"
              stroke-width="2"
              width="14"
              x="0"
              y="0"
            />
          </defs>
          <g
            transform="translate(1,1)"
          >
            <use
              transform="translate(0,0)"
              xlink:href="#dead"
            />
            <use
              transform="translate(14,0)"
              xlink:href="#alive"
            />
            <use
              transform="translate(28,0)"
              xlink:href="#dead"
            />
            <use
              transform="translate(42,0)"
              xlink:href="#dead"
            />
            <use
              transform="translate(56,0)"
              xlink:href="#alive"
            />
            <use
              transform="translate(0,14)"
              xlink:href="#alive"
            />
            <use
              transform="translate(14,14)"
              xlink:href="#dead"
            />
            <use
              transform="translate(28,14)"
              xlink:href="#dead"
            />
            <use
              transform="translate(42,14)"
              xlink:href="#dead"
            />
            <use
              transform="translate(56,14)"
              xlink:href="#dead"
            />
            <use
              transform="translate(0,28)"
              xlink:href="#alive"
            />
            <use
              transform="translate(14,28)"
              xlink:href="#dead"
            />
            <use
              transform="translate(28,28)"
              xlink:href="#dead"
            />
            <use
              transform="translate(42,28)"
              xlink:href="#dead"
            />
            <use
              transform="translate(56,28)"
              xlink:href="#alive"
            />
            <use
              transform="translate(0,42)"
              xlink:href="#alive"
            />
            <use
              transform="translate(14,42)"
              xlink:href="#alive"
            />
            <use
              transform="translate(28,42)"
              xlink:href="#alive"
            />
            <use
              transform="translate(42,42)"
              xlink:href="#alive"
            />
            <use
              transform="translate(56,42)"
              xlink:href="#dead"
            />
          </g>
        </svg>
        <h1>
          Conway's Game of life
        </h1>
      </div>
      <div>
        <button
          class="storybook-button storybook-button--small storybook-button--primary"
          type="button"
        >
          Make it so
        </button>
        <button
          class="storybook-button storybook-button--small storybook-button--primary"
          type="button"
        >
          Animate
        </button>
        <button
          class="storybook-button storybook-button--small storybook-button--primary"
          type="button"
        >
          Shuffle it
        </button>
        <button
          class="storybook-button storybook-button--small storybook-button--primary"
          type="button"
        >
          Erase
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`Commandbar should default expected command settings 1`] = `
<div>
  <header>
    <div
      class="wrapper"
    >
      <div>
        <svg
          height="58"
          version="1.0"
          width="72"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <rect
              fill="black"
              height="14"
              id="alive"
              stroke="#c0c0c0"
              stroke-width="2"
              width="14"
              x="0"
              y="0"
            />
            <rect
              fill="white"
              height="14"
              id="dead"
              stroke="#c0c0c0"
              stroke-width="2"
              width="14"
              x="0"
              y="0"
            />
          </defs>
          <g
            transform="translate(1,1)"
          >
            <use
              transform="translate(0,0)"
              xlink:href="#dead"
            />
            <use
              transform="translate(14,0)"
              xlink:href="#alive"
            />
            <use
              transform="translate(28,0)"
              xlink:href="#dead"
            />
            <use
              transform="translate(42,0)"
              xlink:href="#dead"
            />
            <use
              transform="translate(56,0)"
              xlink:href="#alive"
            />
            <use
              transform="translate(0,14)"
              xlink:href="#alive"
            />
            <use
              transform="translate(14,14)"
              xlink:href="#dead"
            />
            <use
              transform="translate(28,14)"
              xlink:href="#dead"
            />
            <use
              transform="translate(42,14)"
              xlink:href="#dead"
            />
            <use
              transform="translate(56,14)"
              xlink:href="#dead"
            />
            <use
              transform="translate(0,28)"
              xlink:href="#alive"
            />
            <use
              transform="translate(14,28)"
              xlink:href="#dead"
            />
            <use
              transform="translate(28,28)"
              xlink:href="#dead"
            />
            <use
              transform="translate(42,28)"
              xlink:href="#dead"
            />
            <use
              transform="translate(56,28)"
              xlink:href="#alive"
            />
            <use
              transform="translate(0,42)"
              xlink:href="#alive"
            />
            <use
              transform="translate(14,42)"
              xlink:href="#alive"
            />
            <use
              transform="translate(28,42)"
              xlink:href="#alive"
            />
            <use
              transform="translate(42,42)"
              xlink:href="#alive"
            />
            <use
              transform="translate(56,42)"
              xlink:href="#dead"
            />
          </g>
        </svg>
        <h1>
          Game of Life on Mars
        </h1>
      </div>
      <div>
        <button
          class="storybook-button storybook-button--small storybook-button--primary"
          type="button"
        >
          Generate
        </button>
        <button
          class="storybook-button storybook-button--small storybook-button--primary"
          type="button"
        >
          Simulate
        </button>
        <button
          class="storybook-button storybook-button--small storybook-button--primary"
          type="button"
        >
          Randomise
        </button>
        <button
          class="storybook-button storybook-button--small storybook-button--primary"
          type="button"
        >
          Clear
        </button>
      </div>
    </div>
  </header>
</div>
`;
